--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "masterpokemon99",
   "version": "0.1.0",
+  "homepage": "https://joboxd.github.io/Poke-App/build",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
